samples/oauth2-proxy/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debugger-pod
spec:
  template:
    spec:
      containers:
      - name: oauth2-proxy
        image: oauth2-proxy/oauth2-proxy:latest
        ports:
          - containerPort: 4180
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 128Mi
