samples/oauth2-proxy/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debugger
spec:
  ports:
  - name: oauth2
    port: 4180
    protocol: TCP
    targetPort: 4180
