samples/oauth2-proxy/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debugger
spec:
  rules:
  - host: debugger.apps.kind.local
    http:
      paths:
      - backend:
          service:
            name: debugger
            port:
              number: 4180
        path: /
        pathType: Prefix
